Fixes screen size grid scrollbar issue

--- a/src/grid.css
+++ b/src/grid.css
@@ -52,7 +52,7 @@
 	top: 0;
 
 	height: 100vh;
-	width: 100vw;
+	width: 100%;
 }
 
 /*Self*/
